package com.battleship.modelo;

public enum EstadoBarco {
    POSICIONADO, HUNDIDO, NO_POSICIONADO
}
