package com.battleship.modelo;

public enum ResultadoAtaque {
    ACIERTO, FALLA, YA_ATACADO
}
